--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 {% block header %}
   <header class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand logo" , href="/">MatBoy</a>
+      <a class="navbar-brand logo" href="/">MatBoy</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse"
               data-target="#navbarContent" aria-controls="navbarSupportedContent"
               aria-expanded="false" aria-label="Toggle navigation">
