--- a/templates/react_index.html
+++ b/templates/react_index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>MatBoy</title>
 </head>
-<body>
-<div id="root"></div>
-<script src="{{url_for('static', filename='bundle.js')}}"></script>
+<body id="root" class="d-flex flex-column h-100">
 </body>
+<script src="{{url_for('static', filename='bundle.js')}}"></script>
 </html>
