--- a/templates/base.html
+++ b/templates/base.html
@@ -118,7 +118,8 @@
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container d-flex justify-content-around">
       <span class="text-muted">© 2020 Даниил Сотников</span>
-      <span class="text-muted"><a href="/credits">Об авторах</a></span>
+      <span class="text-muted">
+          <a href="/credits">Об авторах</a></span>
     </div>
   </footer>
 {% endblock main %}
