--- a/static/css/style.css
+++ b/static/css/style.css
@@ -102,7 +102,7 @@ button.hidden {
     }
 }
 
-.shadow-box__title {
+.shadow-box__title { // box_title
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: flex;
@@ -382,36 +382,20 @@ button, input {
 }
 
 
-.box_container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap-reverse;
-    flex-direction: row;
-    margin: 60px 0px 10px 0px;
-    padding: 0 5px;
-}
-
-/* Сохраняет расстояние между элементами */
-.box_container-covid {
-    justify-content: space-between;
-}
-
-
 .box-label {
     font-size: 3em;
     width: 100%;
 }
 
-.box {
-    flex-shrink: 0;
-    flex-grow: 1;
-    background: #fff;
-    box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    padding: 20px;
-    margin: 5px;
-    box-sizing: border-box;
-    align-self: flex-end;
+.box_title {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  color: #333;
+  font-size: 22px;
+  line-height: 26px;
+  font-weight: 700;
 }
 
 .box-non_flex {
@@ -420,18 +404,6 @@ button, input {
     flex-grow: unset;
     align-self: none;
     margin: 60px 10px 10px 10px;
-}
-
-.box-tiny {
-    max-width: 380px;
-}
-
-.box-middle {
-    max-width: 530px;
-}
-
-.box-large {
-    max-width: 700px;
 }
 
 .box_item-title {
