--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/reboot";
 
 $font-stack: "-apple-system", BlinkMacSystemFont, Arial, sans-serif;
 $background-color: $gray-200;
@@ -25,4 +26,10 @@ body {
   width: 100%;
   box-sizing: border-box;
   align-items: center;
+}
+
+.list-group-flush.list-group-horizontal > .list-group-item {
+  border-bottom: $list-group-border-width solid $list-group-border-color;
+  border-top: 0;
+  border-left: $list-group-border-width solid $list-group-border-color;
 }
