--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+@import "~react-datepicker/dist/react-datepicker.css";
 
 $font-stack: "-apple-system", BlinkMacSystemFont, Arial, sans-serif;
 $background-color: $gray-200;
