Game status changing

--- a/src/components/models/Game/ProtocolView/ProtocolToolbar.scss
+++ b/src/components/models/Game/ProtocolView/ProtocolToolbar.scss
@@ -14,13 +14,13 @@
     &-saving {
 
     }
-    &__savedTime {
+    &__time {
       margin: 0 .2em;
       color: black;
     }
   }
   &__buttons {
-    button {
+    .btn {
       padding: 0 .2em;
     }
     &__swap {
