--- a/src/components/layout/Box/Box.scss
+++ b/src/components/layout/Box/Box.scss
@@ -8,45 +8,53 @@
 }
 
 .box {
-  flex-shrink: 0;
-  flex-grow: 1;
+  word-wrap: break-word;
+  flex: 1 1 auto;
+  min-width: 0;
   background: #fff;
   box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   padding: 20px;
   margin: 5px;
   box-sizing: border-box;
-  align-self: flex-end;
-}
+  //&-tiny {
+  //  max-width: 380px;
+  //}
+  //&-middle {
+  //  max-width: 530px;
+  //}
+  //&-large {
+  //  max-width: 700px;
+  //}
+  &-full {
+    width: 100%;
+  }
 
-.box-tiny {
-  max-width: 380px;
-}
-
-.box-middle {
-  max-width: 530px;
-}
-
-.box-large {
-  max-width: 700px;
-}
-
-.box-square {
-  $size: 300px;
-  max-width: $size;
-  min-width: $size;
-  min-height: $size;
-  max-height: $size;
+  &-square {
+    $size: 350px;
+    width: $size;
+    //height: $size;
+    flex-grow: 0;
+  }
 }
 
 
 .box_container {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
   flex-direction: row;
   margin: 60px 0 10px 0;
   padding: 0 5px;
+  .box {
+    align-self: flex-start;
+  }
+  &-reverseWrap {
+    flex-wrap: wrap-reverse;
+    .box {
+      align-self: flex-end;
+    }
+  }
 }
 
 /* Сохраняет расстояние между элементами */
